--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     
-    <title>Project Cerium</title>
+    <title>IO Extended 2016 Granada</title>
     <meta name="description" content="">
     <meta name="twitter:card" value="">
     <meta name="twitter:site" content="">
@@ -20,7 +20,7 @@
     <meta property="og:description" content="">
     <meta property="og:image" content="" />
 
-    <link rel="icon" href="/data/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/data/images/favicon.png" type="image/x-icon">
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js" async></script>
     <link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
     <link rel="import" href="elements.html">
