Updated elements project

--- a/public/elements.html
+++ b/public/elements.html
@@ -44,8 +44,8 @@
 
 <link rel="import" href="src/app-page.html">
 <link rel="import" href="src/home-page.html">
-<link rel="import" href="src/speaker-page.html">
-<link rel="import" href="src/register-page.html">
-<link rel="import" href="src/transport-page.html">
+<!--<link rel="import" href="src/speaker-page.html">-->
+<!--<link rel="import" href="src/register-page.html">-->
+<!--<link rel="import" href="src/transport-page.html">-->
 <link rel="import" href="src/agenda-page.html">
 <link rel="import" href="src/footer-page.html">
