--- a/public/src/footer-page.html
+++ b/public/src/footer-page.html
@@ -76,7 +76,7 @@
             <div id="footer-contain">
                 <a href="{{pagecontents.organization_url}}" target="_blank"><img src="{{pagecontents.organization_image}}" id="footer-gdg"></a>
                 <p>© 2016 Based on <a href="https://github.com/limhenry" target="_blank">Project Cerium</a> by <a href="https://limhenry.xyz" target="_blank">Henry Lim</a>.</p>
-                <p>Designed and created by <a href="{{pagecontents.author_url}}" target="_blank">{{pagecontents.author_name}}</a> <b>&#183;</b> {{pagecontents.organization_name}}</p>
+                <p>Readapted by <a href="{{pagecontents.organization_url}}" target="_blank">{{pagecontents.organization_name}}</a> Team</p>
             </div>
         </footer>
     </template>
