Removing unused elements in menu and fixing problem with image in responsive view

--- a/public/src/app-page.html
+++ b/public/src/app-page.html
@@ -73,6 +73,9 @@
             paper-tabs {
                 margin-right: 0px;
             }
+            .gcp-logo{
+              width: 90%;
+            }
         }
         </style>
         <iron-ajax auto url="/data/page_data.json" handle-as="json" last-response="{{handleResponse}}"></iron-ajax>
@@ -89,10 +92,7 @@
                     </paper-toolbar>
                     <iron-selector attr-for-selected="id" selected="{{data.page}}">
                         <paper-item id="" drawer-toggle on-tap="scrollTop">{{pagecontents.movil-menu.home}}</paper-item>
-                        <paper-item id="speaker" drawer-toggle on-tap="scrollTop">{{pagecontents.movil-menu.speakers}}</paper-item>
                         <paper-item id="agenda" drawer-toggle on-tap="scrollTop">{{pagecontents.movil-menu.agenda}}</paper-item>
-                        <paper-item id="getting" drawer-toggle on-tap="scrollTop">{{pagecontents.movil-menu.getting}}</paper-item>
-                        <paper-item id="register" drawer-toggle on-tap="scrollTop">{{pagecontents.movil-menu.register}}</paper-item>
                     </iron-selector>
                 </app-drawer>
             </template>
@@ -112,10 +112,7 @@
                             <div title></div>
                             <paper-tabs attr-for-selected="id" selected="{{data.page}}">
                                 <paper-tab id="" on-tap="scrollTop">{{pagecontents.menu.home}}</paper-tab>
-                                <paper-tab id="speaker" on-tap="scrollTop">{{pagecontents.menu.speakers}}</paper-tab>
                                 <paper-tab id="agenda" on-tap="scrollTop">{{pagecontents.menu.agenda}}</paper-tab>
-                                <paper-tab id="getting" on-tap="scrollTop">{{pagecontents.menu.getting}}</paper-tab>
-                                <paper-tab id="register" on-tap="scrollTop">{{pagecontents.menu.register}}</paper-tab>
                             </paper-tabs>
                         </template>
                     </app-toolbar>
