Updated panel mobile

--- a/public/src/app-page.html
+++ b/public/src/app-page.html
@@ -86,8 +86,8 @@
                     <paper-toolbar class="tall">
                         <div class="top gcp-logo" flex style="background: url('{{pagecontents.header.drawer_icon_picture}}') no-repeat; background-size: contain;"></div>
                         <div class="bottom drawer-text">
-                            <div>9:00AM, 30 April</div>
-                            <div>Asia Pacific University, KL</div>
+                            <div>16:00h, 18 Mayo 2016</div>
+                            <div>ETSIIT de la UGR</div>
                         </div>
                     </paper-toolbar>
                     <iron-selector attr-for-selected="id" selected="{{data.page}}">
